--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -61,3 +61,24 @@ html {
   margin: 40px;
 }
 
+.inputSearch {
+  width: 300px;
+  font: inherit;
+  font-size: 20px;
+}
+
+.btnSearch:hover {
+  opacity: 1;
+}
+
+.btnSearch {
+  display: inline-block;
+    width: 30px;
+    height: 30px;
+    border: 0;
+    background-image: url(https://image.flaticon.com/icons/svg/149/149852.svg);
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: 50%;
+  cursor: pointer;
+}
